--- a/Belajar_TensorFlow.ipynb
+++ b/Belajar_TensorFlow.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Belajar TensorFlow.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -24,6 +25,8 @@
         }
       },
       "source": [
+        "# Image Classification\n",
+        "\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "import numpy as np\n",
@@ -38,6 +41,7 @@
         "train_images = train_images / 255.0\n",
         "test_images = test_images / 255.0\n",
         "\n",
+        "\n",
         "model = keras.Sequential([keras.layers.Flatten(input_shape=(28,28)),\n",
         "                          keras.layers.Dense(128, activation=\"relu\"),\n",
         "                          keras.layers.Dense(10, activation=\"softmax\")])\n",
@@ -50,7 +54,9 @@
         "\n",
         "model.save(\"model_image_classification.h5\")\n",
         "\n",
-        "model = keras.models.load_model(\"model_image_classification.h5\")\n",
+        "\n",
+        "#model = keras.models.load_model(\"model_image_classification.h5\")\n",
+        "\n",
         "\n",
         "prediction = model.predict(test_images)\n",
         "\n",
@@ -152,36 +158,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "geUrR3L_HSJg",
-        "colab_type": "text"
-      },
-      "source": [
-        "First run for creating model:\n",
-        "\n",
-        "\n",
-        "\n",
-        "model = keras.Sequential([keras.layers.Flatten(input_shape=(28,28)),\n",
-        "                          keras.layers.Dense(128, activation=\"relu\"),\n",
-        "                          keras.layers.Dense(10, activation=\"softmax\")])\n",
-        "\n",
-        "model.compile(optimizer=\"adam\", \n",
-        "              loss=\"sparse_categorical_crossentropy\", \n",
-        "              metrics=[\"accuracy\"])\n",
-        "\n",
-        "model.fit(train_images, train_labels, epochs=5)\n",
-        "\n",
-        "model.save(\"model_image_classification.h5\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "Next run (model sudah melakukan training) :\n",
-        "\n",
-        "model = keras.models.load_model(\"model_image_classification.h5\")"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "nLG9wgjLDygW",
@@ -193,6 +169,8 @@
         }
       },
       "source": [
+        "# Text Classification\n",
+        "\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "import numpy as np\n",
@@ -249,7 +227,7 @@
         "\n",
         "model.save(\"model_text_classification.h5\")\n",
         "\n",
-        "model = keras.models.load_model(\"model_text_classification.h5\")\n",
+        "#model = keras.models.load_model(\"model_text_classification.h5\")\n",
         "\n",
         "with open(\"test.txt\", encoding=\"utf-8\") as f:\n",
         "    for line in f.readlines():\n",
@@ -401,45 +379,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NW_LqI6VHAOd",
-        "colab_type": "text"
-      },
-      "source": [
-        "First run for creating model:\n",
-        "\n",
-        "\n",
-        "\n",
-        "model = keras.Sequential()\n",
-        "model.add(keras.layers.Embedding(88000, 16))\n",
-        "model.add(keras.layers.GlobalAveragePooling1D())\n",
-        "model.add(keras.layers.Dense(16, activation=\"relu\"))\n",
-        "model.add(keras.layers.Dense(1, activation=\"sigmoid\"))\n",
-        "\n",
-        "model.summary()\n",
-        "\n",
-        "model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
-        "\n",
-        "x_val = train_data[:10000]\n",
-        "x_train = train_data[10000:]\n",
-        "\n",
-        "y_val = train_labels[:10000]\n",
-        "y_train = train_labels[10000:]\n",
-        "\n",
-        "fitModel = model.fit(x_train, y_train, epochs=40, batch_size=512, validation_data=(x_val, y_val), verbose=1)\n",
-        "\n",
-        "results = model.evaluate(test_data, test_labels)\n",
-        "print(results)\n",
-        "\n",
-        "model.save(\"model_text_classification.h5\")\n",
-        "\n",
-        "Next run (model sudah melakukan training) :\n",
-        "\n",
-        "model = keras.models.load_model(\"model_text_classification.h5\")"
       ]
     }
   ]
